# sqlite-rembed

./: .gitignore  API_KEY_GUIDE.md  BATCH_PROCESSING.md  CLEANUP_SUMMARY.md  Cargo.toml  DRAFT_PR.md  FORK_UPDATE_SUMMARY.md  HYBRID_MULTIMODAL_IMPLEMENTATION.md  ISSUES_RESOLVED.md  LLAVA_AND_MULTIMODAL.md  Makefile  PYTHON_BINDINGS_ANALYSIS.md  README.md  README_GENAI.md  benchmark_concurrent.py  build.py  fix_multimodal_registration.patch  hatch_build.py  pyproject.toml  quick_benchmark.py  test.sql  test_basic.sql  test_batch.sql  test_both_client_types.py  test_client_fix_complete.py  test_multimodal.py  test_ollama_models.sql  test_python_integration.py  test_registration_fix.py  test_regular_client_bug.py  test_user_case.py
.github/workflows/: ci.yml  release.yml
bindings/python/: README.md  pyproject.toml
bindings/python/sqlite_rembed/: __init__.py
bindings/python/tests/: test_basic.py
docs/: README.md
docs/guides/: CONCURRENT_PROCESSING.md
docs/technical/: FORK_INTEGRATION_COMPLETE.md  GENAI_BENEFITS.md  GENAI_MIGRATION.md  MIGRATION_SUMMARY.md
examples/: README.md
examples/rust/: llava.rs
examples/sql/: api_keys.sql  genai.sql
src/: batch.rs  clients.rs  clients_genai.rs  clients_vtab_genai.rs  genai_client.rs  lib.rs  lib_genai.rs  mock_provider.rs  multimodal.rs
