[package]
name = "sqlite-rembed"
version = "0.0.1-alpha.9"
edition = "2021"

[dependencies]
serde_json = "1.0.117"
sqlite-loadable = "0.0.6-alpha.6"
zerocopy = "0.7.34"
genai = { git = "https://github.com/rsp2k/rust-genai", branch = "main" }
tokio = { version = "1.41", features = ["rt", "rt-multi-thread", "macros", "sync"] }
once_cell = "1.20"
base64 = "0.22"
futures = "0.3"

[lib]
crate-type=["cdylib", "staticlib", "lib"]

